# Multi-Lingual-MCQ-Generator

./: .gitignore  README.md  pyproject.toml
src/: ak_data_preprocesing.py  ak_generate_mcq.py  ak_lstm_encoder.py  ak_question_generation.py  ak_transformer_finetune.py  distractor_generation.py  evaluation.py  final.py  pipeline.py  r.txt  translation.py
